# curly-auto-robot

./: README.md
ECE650/Week2 - Python/: Week2UnitTestSample.py
ECE650/Week2 - Python/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
ECE650/Week3 - Cpp:CMake/: CMakeLists.txt  main.cpp
ECE650/Week3 - Cpp:CMake/src/: main.py  mylib.h
